JDK-11で非推奨になったメソッドを修正。